Fix bucket structure
Bench: 11672691

--- a/src/engine/Makefile
+++ b/src/engine/Makefile
@@ -1,14 +1,12 @@
 SRCS := $(shell find . -name '*.cpp')
 OBJS := $(SRCS:.cpp=.o)
 
+EVALFILE ?= nnue.bin
+
 HDRS := $(find . -name '*.hpp')
 
 CXX := g++
-CXXFLAGS := -std=c++20 -m64
-
-ifdef EVALFILE
-CXXFLAGS += -DNNUE_PATH=$(EVALFILE)
-endif
+CXXFLAGS := -std=c++20 -m64 -DNNUE_PATH=\"$(EVALFILE)\"
 
 RELEASEFLAGS := -O3 -march=native
 DEBUGFLAGS := -g -O0 -march=x86-64-v3
