--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.11.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
 chess==1.11.2
 click==8.1.8
 exceptiongroup==1.3.0
@@ -10,8 +12,10 @@ idna==3.11
 pydantic==2.12.4
 pydantic_core==2.41.5
 python-chess==1.999
+requests==2.32.5
 sniffio==1.3.1
 starlette==0.49.3
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+urllib3==2.5.0
 uvicorn==0.38.0
