--- a/src/engine/Makefile
+++ b/src/engine/Makefile
@@ -7,10 +7,10 @@ EVALFILE ?= nnue.bin
 HDRS := $(find . -name '*.hpp')
 
 CXX := g++
-CXXFLAGS := -std=c++20 -m64 -DNNUE_PATH=\"$(EVALFILE)\"
+CXXFLAGS := -std=c++20 -DNNUE_PATH=\"$(EVALFILE)\"
 
 RELEASEFLAGS := -O3 -march=native
-DEBUGFLAGS := -g -O0 -march=x86-64-v3
+DEBUGFLAGS := -g -O0 -march=native
 
 release: CXXFLAGS += $(RELEASEFLAGS)
 release: $(EXE)
